@@ -4,6 +4,7 @@
 
 <head>
   <title>Conversation Reader</title>
+  <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="chrome://messenger/skin/tagColors.css"/>
   <link rel="stylesheet" type="text/css" href="chrome://conversations/skin/boxflex.css">
   <link rel="stylesheet" type="text/css" href="chrome://conversations/skin/conversation.css">
